--- a/index.html
+++ b/index.html
@@ -96,6 +96,21 @@
 
 
 
+<p id="me">ERLING HAALAND</p>
+
+<button onclick="hide()">HIDE</button>
+
+<button onclick="show()">SHOW</button>
+
+
+
+
+
+
+
+
+
+
 
 
 
